# putio-get

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  putio-get.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
putio_get/: __init__.py  cli.py  client.py  config.py  core.py  downloader.py  mirrors.py  utils.py
